--- a/CSS/Responsiveness.css
+++ b/CSS/Responsiveness.css
@@ -26,7 +26,18 @@
   }
 }
 @media (max-width: 425px) {
+  body {
+    position: relative;
+  }
   main {
     width: 100%;
+    top: -1.9rem;
+    position: absolute;
+  }
+  .Result h1 {
+    padding-top: 2.5rem;
+  }
+  .Summary {
+    padding-bottom: 2rem;
   }
 }
