--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,14 +1,7 @@
-.attribution {
-  font-size: 11px;
-  text-align: center;
-
-  position: absolute;
-  bottom: 0;
-  left: 40%;
-  /* margin: 0 auto; */
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 html {
   font-family: "Hanken Grotesk", sans-serif;
