--- a/CSS/Responsiveness.css
+++ b/CSS/Responsiveness.css
@@ -6,9 +6,11 @@
 @media (max-width: 720px) {
   body {
     margin: 0;
+    padding: 0;
   }
   main {
     flex-direction: column;
+    transform: scale(1);
   }
   .Result h1 {
     padding-top: 3rem;
@@ -18,6 +20,11 @@
   }
   .summary-width {
     width: 100%;
+  }
+}
+@media (max-width: 488px) {
+  main {
+    width: 90%;
   }
 }
 @media (max-width: 425px) {
